# Palantir

./: CMakeLists.txt  config.cpp  config.h  main.cpp
Docs/: api.md
Server/: criptpass.cpp  criptpass.h  server.cpp  server.h
config/: config.ini
